# bootloader

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  linker.ld  x86_16bit.json
.cargo/: config.toml
boot/: Makefile  README.md  print.asm
boot/src/: boot.S  boot.asm
booter/: Cargo.toml  build.rs
booter/src/: lib.rs  main.rs
bootloader/bootstrap/: Cargo.toml  bootstrap.ld  build.rs  link.ld  stage-1.ld
bootloader/bootstrap/src/: disk.rs  main.rs
bootloader/first_stage/: build.rs
bootloader/stage_one/: Cargo.toml  build.rs  link.ld  stage1.ld
bootloader/stage_one/src/: disk.rs  main.rs  protected.rs
bootloader/stage_two/: Cargo.toml  build.rs  link.ld  target.json
bootloader/stage_two/src/: main.rs
builder/: Cargo.toml  build.rs
builder/src/: command.rs  lib.rs  main.rs
common/: Cargo.toml
common/.config/: config.toml
common/src/: bios.rs  lib.rs  modes.rs
first_stage/: Cargo.toml  build.rs  stage-1.ld
first_stage/.cargo/: config.toml
first_stage/src/: boot.s  main.rs
second_stage/: Cargo.toml  stage-2.ld
second_stage/.cargo/: config.toml
second_stage/src/: main.rs
src/: boot.S  disk.inc  gdt.S  gdt.inc  main.rs  math_loc.rs  mathlib.rs  print.inc
src/boot/: README.md  boot.asm
src/math_loc/: limits.rs  ranges.rs
src/mathlib/: floatingrange.rs
